--- a/src/component/pages/filterPage/style.css
+++ b/src/component/pages/filterPage/style.css
@@ -71,10 +71,7 @@
 }
 
 
-.list-container{
-    display: flex;
-    flex-wrap: wrap;
-}
+
 
 .list-of-skills{
     width: 100%;
@@ -96,8 +93,10 @@
 .list-container{
   display: flex;
   flex-wrap: wrap;
+  /* overflow-y: scroll; */
   margin-top: 0px;
   padding-top: 0px;
+  
   
 }
 .spinner-align{
@@ -108,5 +107,6 @@
   width: 100%;
   margin-bottom: 20px;
   padding: 30px 50px;
-  margin: 20px 0;
+  margin: 20px; 
+  margin-left: 30%;
 }
